# koia-shell

./: Cargo.toml  README.md  build.rs
src/: main.rs
src/config/: config.rs
src/config_shell/: config.rs  defaults.rs  mod.rs  theme.rs
src/config_shell/components/: mod.rs  notifications.rs  taskbar.rs  theme.rs  tray.rs
src/helpers/: mod.rs
src/helpers/commands/: mod.rs  runner.rs
src/helpers/displays/: display.rs  mod.rs
src/helpers/touch_area/: manager.rs  mod.rs
src/services/: mod.rs
src/services/battery/: listener.rs
src/services/brightness/: adjuster.rs  listener.rs  mod.rs
src/services/hardware_specific/: mod.rs
src/services/hardware_specific/framework/: mod.rs
src/services/hardware_specific/framework/fans/: adjuster.rs  listener.rs
src/services/notifications/: manager.rs
src/services/power_profiles/: adjuster.rs  listener.rs  mod.rs
src/services/taskbar/: cache.rs  mod.rs  serialize.rs  taskbar.rs
src/services/time/: provider.rs
src/services/tray/: manager.rs
src/services/volume/: adjuster.rs  listener.rs  mod.rs
ui/: app-window.slint  bar-window.slint  clipboard-window.slint  notification-window.slint  shared-items.slint  ui.slint
ui/assets/battery/25x25/: resize.py
ui/components/: battery.slint  brightness.slint  profiles.slint  taskbar.slint  tray.slint  volume.slint
ui/material-1.0/: material.slint
ui/material-1.0/ui/components/: base_button.slint  extended_touch_area.slint  scroll_view.slint  search_bar.slint  state_layer.slint  tooltip.slint
