[package]
name = "koia-shell"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.6.0", features = ["derive"] }
clap_derive = { version = "4.0.0-rc.1" }
config = "0.15.23"
dirs = "6.0.0"
env_logger = "0.11.10"
freedesktop-desktop-entry = "0.8.1"
freedesktop-icons = "0.4.0"
image = "0.25.10"
log = "0.4.32"
niri-ipc = "26.4.0"
notify = "8.2.0"
serde = "1.0.228"
slint = { version = "=1.16.1", default-features = false, features = [
    "accessibility",
    "compat-1-2",
    "renderer-winit-femtovg",
    "std",
    "backend-winit",
    "gettext",
] }
spell-framework = { git = "https://github.com/VimYoung/Spell", ver = "f44fcf91539aef28a886dbc4da6a3a7c4bb2361a" }
system-tray = "0.8.6"
tokio = "1.52.3"

toml = "1.1.2"
wayle-battery = "0.1.2"

[build-dependencies]
slint-build = "=1.16.1"


[profile.release]
lto = "thin"
opt-level = 3
codegen-units = 1
panic = "abort"
strip = true
debug = 0
debug-assertions = false
