[package]
name = "koia-shell"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.6.0", features = ["derive"] }
clap_derive = { version = "4.0.0-rc.1" }
config = "0.15.23"
dirs = "6.0.0"
env_logger = "0.11.10"
freedesktop-desktop-entry = "0.8.1"
freedesktop-icons = "0.4.0"
futures = "0.3.32"
image = "0.25.10"
log = "0.4.32"
niri-ipc = "26.4.0"
notify = "8.2.0"
serde = "1.0.228"
slint = { version = "=1.16.1", default-features = false, features = [
    "accessibility",
    "compat-1-2",
    "renderer-winit-software",
    "std",
    "backend-winit",
    "gettext",
] }
spell-framework = { git = "https://github.com/themkoi/Spell", ver = "9accfc14d7595a483becf1b623687446c6faac92" }
tokio = "1.52.3"
toml = "1.1.2"

wayle-audio = "0.1.4"
wayle-battery = "0.1.2"
system-tray = "0.8.6"
wayle-power-profiles = "0.1.4"
chrono = "0.4.45"


[build-dependencies]
slint-build = "=1.16.1"


[profile.release]
lto = "fat"
opt-level = 3
codegen-units = 1
panic = "abort"
strip = true
debug = 0
debug-assertions = false
