[package]
name = "koia-shell"
version = "0.1.1"
edition = "2021"

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
clap_derive = { version = "4.6.1" }
config = "0.15.25"
dirs = "6.0.0"
env_logger = "0.11.11"
freedesktop-desktop-entry = "0.8.1"
freedesktop-icons = "0.4.0"
futures = "0.3.32"
image = "0.25.10"
log = "0.4.33"
niri-ipc = "26.4.0"
notify = "8.2.0"
serde = "1.0.228"
slint = { version = "=1.17.0", default-features = false, features = [
    "accessibility",
    "compat-1-2",
    "renderer-winit-software",
    "std",
    "backend-winit",
    "gettext",
] }
spell-framework = { git = "https://github.com/themkoi/Spell", rev = "9accfc14d7595a483becf1b623687446c6faac92" }
tokio = "1.52.3"
toml = "1.1.2"

wayle-audio = "0.1.4"
system-tray = "0.8.7"
wayle-power-profiles = "0.1.4"
chrono = "0.4.45"
serde_json = "1.0.150"
upower_dbus = { git = "https://github.com/pop-os/dbus-settings-bindings", rev = "eed01dd3609e90e3c8cd043656734c500956c793" , package = "upower_dbus" }
zbus = "5.16.0"

[features]
default = ["framework"]
framework = []
default_hardware = []

[build-dependencies]
slint-build = "=1.17.0"

[profile.dev]
debug = 1
split-debuginfo = "unpacked"
incremental = true
codegen-units = 256
opt-level = 0
lto = false
panic = "abort"


[profile.release]
lto = "thin"
opt-level = 3
codegen-units = 1
panic = "abort"
strip = true
debug = 0
debug-assertions = false
